src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Action_ID_Generator__c</fullName>
        <displayFormat>AR{00000}</displayFormat>
        <label>Action ID Generator</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Approximate_Number_of_Attendees__c</fullName>
        <description>Approximate number of presentation attendees [NOTE: We understand this will be a rough estimate for presentations unless attendee registration information is made available.]</description>
        <inlineHelpText>Approximate number of presentation attendees [NOTE: We understand this will be a rough estimate for presentations unless attendee registration information is made available.]</inlineHelpText>
        <label>Approximate Number of Attendees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C4GRemember_to_upload_presentation_files__c</fullName>
        <defaultValue>"Add a link to the file used for this presentation to the Link to File field"</defaultValue>
        <description>A reminder to Campaign creator to upload presentation files during Campaign creation.</description>
        <inlineHelpText>A reminder to Campaign creator to upload presentation files during Campaign creation.</inlineHelpText>
        <label>REMINDER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Approximate_Traffic__c</fullName>
        <description>Number of persons who stopped by the exhibit.</description>
        <inlineHelpText>Number of persons who stopped by the exhibit.</inlineHelpText>
        <label>Approximate Exhibit Traffic</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C4G_Audience__c</fullName>
        <description>HealthySteps network only is exclusive to HealthySteps sites. General may include some HealthySteps network participants, but also other non-HealthySteps participants.</description>
        <inlineHelpText>HealthySteps network only is exclusive to HealthySteps sites. General may include some HealthySteps network participants, but also other non-HealthySteps participants.</inlineHelpText>
        <label>Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HealthySteps network only</fullName>
                </value>
                <value>
                    <fullName>Interested HealthySteps site or system</fullName>
                </value>
                <value>
                    <fullName>Current/Potential funder or payer</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_City__c</fullName>
        <description>Enter the city where the presentation/exhibit was held. For webinars, please select N/A.</description>
        <inlineHelpText>Enter the city where the presentation/exhibit was held. For webinars, please select N/A.</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Cost_of_Exhibit__c</fullName>
        <label>Cost of Exhibit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C4G_Country__c</fullName>
        <description>Select the country where the presentation/exhibit was held. For webinars, please select N/A.</description>
        <inlineHelpText>Select the country where the presentation/exhibit was held. For webinars, please select N/A.</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Deps</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Date_of_Exhibit__c</fullName>
        <label>Date of Exhibit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C4G_Date_of_Next_Conference__c</fullName>
        <description>Leave blank if unknown.</description>
        <inlineHelpText>Leave blank if unknown.</inlineHelpText>
        <label>Date of Next Conference</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C4G_Date_of_Presentation__c</fullName>
        <label>Date of Presentation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C4G_Evaluation_of_presentation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was there an evaluation of the presentation?</description>
        <inlineHelpText>Was there an evaluation of the presentation?</inlineHelpText>
        <label>Evaluation of presentation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C4G_ExhibitName__c</fullName>
        <description>Populated with the name of the ZTT Exhibit.</description>
        <inlineHelpText>Populated with the name of the ZTT Exhibit.</inlineHelpText>
        <label>Exhibit Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Exhibit_in_Future__c</fullName>
        <description>Do you think it would be useful to exhibit at this conference in the future?</description>
        <inlineHelpText>Do you think it would be useful to exhibit at this conference in the future?</inlineHelpText>
        <label>Exhibit in Future</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Link_File__c</fullName>
        <description>Please insert a link to the SharePoint/T Drive/Dropbox file you want associated with this presentation</description>
        <inlineHelpText>Please insert a link to the SharePoint/T Drive/Dropbox file you want associated with this presentation</inlineHelpText>
        <label>Link to File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>C4G_NO_Exhibit_Staff__c</fullName>
        <label>National Office Exhibit Staff</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Name_of_Conference__c</fullName>
        <label>Name of Conference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C4G_OtherSurveyTypeDescription__c</fullName>
        <description>If 'Other Survey' is selected in as a Survey Type, please add additional details here.</description>
        <inlineHelpText>If 'Other Survey' is selected in as a Survey Type, please add additional details here.</inlineHelpText>
        <label>Other Survey Type Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C4G_Other_Presenters__c</fullName>
        <description>Please enter the first and last name of each external presenter in separate lines, enter N/A if not applicable.</description>
        <inlineHelpText>Please enter the first and last name of each external presenter in separate lines, enter N/A if not applicable.</inlineHelpText>
        <label>Other Presenters</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C4G_Presentation_Title__c</fullName>
        <label>Presentation Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_State__c</fullName>
        <description>Select the state where the presentation/exhibit was held. For webinars, please select N/A.</description>
        <inlineHelpText>Select the state where the presentation/exhibit was held. For webinars, please select N/A.</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>C4G_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_SurveyType__c</fullName>
        <description>Select the type of survey to send to members of this Campaign,</description>
        <inlineHelpText>Select the type of survey to send to members of this Campaign,</inlineHelpText>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Site Reporting Survey</fullName>
                </value>
                <value>
                    <fullName>Quarterly Reporting Survey</fullName>
                </value>
                <value>
                    <fullName>Technical Assistance Survey</fullName>
                </value>
                <value>
                    <fullName>Other Survey</fullName>
                </value>
                <value>
                    <fullName>Site Profile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFGOrg_Course__c</fullName>
        <label>Org Course</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CFGOrg_Curriculum__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Course</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFGOrg_Curriculum__c</fullName>
        <label>Org Curriculum</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DeliveryFormat__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Curriculum</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_Course__c</fullName>
        <label>Course</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CFG_Curriculum__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Course</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_Curriculum__c</fullName>
        <label>Curriculum</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CFG_DeliveryEvent__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Curriculum</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_DeliveryEvent__c</fullName>
        <label>Delivery Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DeliveryFormat__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZTT Membership</fullName>
                </value>
                <value>
                    <fullName>Annual Conference Library</fullName>
                </value>
                <value>
                    <fullName>Regional PD Institutes</fullName>
                </value>
                <value>
                    <fullName>Annual Conference</fullName>
                </value>
                <value>
                    <fullName>Self-Paced Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CFGOrg_Curriculum__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>90 Minute Overview Virtual Event</fullName>
                </value>
                <value>
                    <fullName>Seminar- Half Day</fullName>
                </value>
                <value>
                    <fullName>Seminar- Full Day</fullName>
                </value>
                <value>
                    <fullName>Extended Day</fullName>
                </value>
                <value>
                    <fullName>Official Two-Day</fullName>
                </value>
                <value>
                    <fullName>Half Day</fullName>
                </value>
                <value>
                    <fullName>Full Day</fullName>
                </value>
                <value>
                    <fullName>Two Day</fullName>
                </value>
                <value>
                    <fullName>Training of Trainers &amp; Trainer Certification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_OrgTopicArea__c</fullName>
        <label>Org Topic Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CFGOrg_Course__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Topic_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_OrgTopicalSessions__c</fullName>
        <label>Org Topical Sessions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Topical_Sessions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_TopicArea__c</fullName>
        <label>Topic Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CFG_Course__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Topic_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_TopicalSessions__c</fullName>
        <label>Topical Sessions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Topical_Sessions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_Upon_Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate Upon Completion?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conference_Meeting_Name__c</fullName>
        <description>Conference/meeting name or webinar series name.</description>
        <inlineHelpText>Conference/meeting name or webinar series name.</inlineHelpText>
        <label>Conference/Meeting/Webinar Series Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryFormat__c</fullName>
        <label>Delivery Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Virtual Event Webinar</fullName>
                </value>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Self-Paced Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exhibit_ConferenceAudience__c</fullName>
        <label>Conference Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Import ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Job_Type_or_Level_of_Attendees__c</fullName>
        <label>Job Type or Level of Attendees</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Program or Agency Leader</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Direct Service</fullName>
                </value>
                <value>
                    <fullName>Other:</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NationalOfficeExhibitStaff1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[old] National Office Exhibit Staff 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NationalOfficeExhibitStaff2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[old] National Office Exhibit Staff 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (National Office Exhibit Staff 2)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NationalOfficeExhibitStaff3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[old] National Office Exhibit Staff 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (National Office Exhibit Staff 3)</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>National_Office_Exhibit_Staff_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Office Exhibit Staff 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Username</field>
                <operation>contains</operation>
                <value>@zerotothree.org</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>National_Office_Exhibit_Staff_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Office Exhibit Staff 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Username</field>
                <operation>contains</operation>
                <value>@zerotothree.org</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>National_Office_Exhibit_Staff_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Office Exhibit Staff 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Username</field>
                <operation>contains</operation>
                <value>@zerotothree.org</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>National_Office_Presenter_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Office Presenter 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Username</field>
                <operation>contains</operation>
                <value>@zerotothree.org</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>National_Office_Presenter_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Office Presenter 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Username</field>
                <operation>contains</operation>
                <value>@zerotothree.org</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>National_Office_Presenter_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Office Presenter 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Username</field>
                <operation>contains</operation>
                <value>@zerotothree.org</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Job_Type_or_Level_of_Attendees__c</fullName>
        <label>Other Job Type or Level of Attendees</label>
        <length>84</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PleasedescribeifOtherselected__c</fullName>
        <description>If 'Other' is selected as 'Type of Presentation,' please describe here.</description>
        <inlineHelpText>If 'Other' is selected as 'Type of Presentation,' please describe here.</inlineHelpText>
        <label>Please describe if Other selected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Content_Focus__c</fullName>
        <label>Primary Content Focus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult Mental Health</fullName>
                </value>
                <value>
                    <fullName>Building Collaborative Relationships with Parents</fullName>
                </value>
                <value>
                    <fullName>Challenging Behaviors</fullName>
                </value>
                <value>
                    <fullName>Children with Special Needs</fullName>
                </value>
                <value>
                    <fullName>Cradling Literacy TOT</fullName>
                </value>
                <value>
                    <fullName>DC: 0-5</fullName>
                </value>
                <value>
                    <fullName>DC: 0-5 TOT</fullName>
                </value>
                <value>
                    <fullName>DC: 0-3R</fullName>
                </value>
                <value>
                    <fullName>Diversity</fullName>
                </value>
                <value>
                    <fullName>Early Brain Development</fullName>
                </value>
                <value>
                    <fullName>Early Literacy</fullName>
                </value>
                <value>
                    <fullName>Environments that support early learning and development</fullName>
                </value>
                <value>
                    <fullName>Family Violence</fullName>
                </value>
                <value>
                    <fullName>FASD</fullName>
                </value>
                <value>
                    <fullName>Home Visiting</fullName>
                </value>
                <value>
                    <fullName>Impact of maltreatment on infants and toddlers</fullName>
                </value>
                <value>
                    <fullName>Infant mental health</fullName>
                </value>
                <value>
                    <fullName>PCAN TOT</fullName>
                </value>
                <value>
                    <fullName>Relationship – based and reflective practice</fullName>
                </value>
                <value>
                    <fullName>School readiness</fullName>
                </value>
                <value>
                    <fullName>Social-Emotional Development</fullName>
                </value>
                <value>
                    <fullName>Systems for program management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Length_In_Hours__c</fullName>
        <label>Session Length (In Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Active_Action_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>kwac__Action_Type__c</columns>
        <columns>kwac__URL_to_Share__c</columns>
        <columns>Action_ID_Generator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Actions</value>
        </filters>
        <label>Active Action Campaigns</label>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Business_Operations</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Professional_Development_Individual,Campaign.Professional_Development_Organization</value>
        </filters>
        <label>Business Operations</label>
    </listViews>
    <listViews>
        <fullName>ITCP_Active_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>ITCP</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>ITCP Active Campaigns</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
</CustomObject>